// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentBarCheckoutButton /> should render disabled button 1`] = `
<Link
  aria-disabled={true}
  disabled={true}
  href="/checkout"
  role="button"
  tabIndex={0}
>
  <RippleButton
    className="sg-1vdkzbz-disabledButton"
    disabled={true}
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <Text
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="cart.checkout"
      transform={null}
    />
  </RippleButton>
</Link>
`;

exports[`<PaymentBarCheckoutButton /> should render enabled button 1`] = `
<Link
  aria-disabled={false}
  disabled={false}
  href="/checkout"
  role="button"
  tabIndex={0}
>
  <RippleButton
    className="sg-16oxzxm-button"
    disabled={false}
    flat={false}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <Text
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="cart.checkout"
      transform={null}
    />
  </RippleButton>
</Link>
`;
